# bevy-tutorial-minesweeper

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.cargo/: config.toml.example
board_plugin/: Cargo.toml
board_plugin/src/: lib.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  mod.rs  uncover.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
scripts/: prepare_build_install_package.sh
src/: main.rs
