[package]
name = "bevy-tutorial-minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# default = ["colored", "egui", "bevy-inspector-egui", "bevy_editor_pls"]
[dependencies]
bevy = { version = "0.7.0" }
board_plugin = { path = "board_plugin" }

# Logging
log = "0.4.0"
env_logger = "0.8.4"

# for WASM
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
console_error_panic_hook = "0.1"
web-log = "1.0.1"
# bevy_web_asset="0.3" # download assets from url

# Console Debug
colored = "2.0"
egui = "0.18"
bevy-inspector-egui = "0.11"
# bevy-inspector-egui = "0.10" # bevy_editor_pls deps
# bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }

# [dev-dependencies]
# test, example, benchmarkでは使われる・・・buildでは有効にならない

[workspace]
members = [
    "board_plugin"
]


[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3


[profile.release]

[profile.test]

[profile.bench]


# featureを気持ち良く切り替える方法がわからない
# [features]
# default = []
# debug = ["colored", "egui", "bevy-inspector-egui", "bevy_editor_pls"]
# colored = { version = "2.0", optional = true }
# egui = { version = "0.18", optional = true }
# bevy-inspector-egui = { version = "0.11", optional = true }
# bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }
